# Sharingan

./: .env  Cargo.toml  Makefile  docker-compose.yml  postman.json
migrations/: 00-down.sql  01-up.sql
src/: config.rs  error.rs  main.rs
src/database/: mod.rs  repository.rs
src/database/entities/: investigations.rs  mod.rs  prelude.rs  users.rs  users_investigations.rs
src/helper/: crypto.rs  mod.rs
src/server/: mod.rs
src/server/handlers/: investigations.rs  mod.rs  users.rs
