[package]
name = "sharingan"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0.1" } # Web framework
clap = { version = "3.1.18", features = ["derive","env"] } # Command line parser
dotenv = { version = "0.15.0" } # Environment file
ring = { version = "0.16.20" } # Elliptic curve cryptography
sea-orm = { version = "0.8.0", features = ["sqlx-postgres","runtime-actix-native-tls"] } # Database ORM
serde = { version = "1.0", features = ["derive"] } # Serialization
